--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -46,6 +46,7 @@ $type-size-8                : 0.625em;  // ~10px
 /*
    Colors
    ========================================================================== */
+$navigationbar-color        : rgba(237, 172, 32, 0.45);
 
 $gray                       : #7a8288;
 $dark-gray                  : mix(#000, $gray, 40%);
