--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -15,6 +15,7 @@
   &__inner-wrap {
     @include container;
     @include clearfix;
+    background: $navigationbar-color;
     padding: 1em 1em 1em;
     font-family: $sans-serif-narrow;
 
@@ -35,6 +36,7 @@
 .masthead__menu {
 
   ul {
+    background: $navigationbar-color;
     margin: 0;
     padding: 0;
     clear: both;
