--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -14,6 +14,7 @@
               {% assign domain = base_path %}
             {% endif %}
             <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
+            <li><a class="brand-image" href="{{ base_path }}"><img class="brand-image" src="images/logo.png"/></a></li>
           {% endfor %}
         </ul>
         <ul class="hidden-links hidden"></ul>
