--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -2,6 +2,16 @@
    NAVIGATION
    ========================================================================== */
 
+
+.navbar .nav > li > a.brand-image {
+      padding: 4px 0px 0px 0px;
+}
+.navbar .nav > li > a > img.brand-image {
+    -webkit-border-radius: 0px;
+       -moz-border-radius: 0px;
+            border-radius: 0px;
+   
+   
 /*
    Breadcrumb navigation links
    ========================================================================== */
