--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -10,7 +10,7 @@
     -webkit-border-radius: 0px;
        -moz-border-radius: 0px;
             border-radius: 0px;
-   
+}
    
 /*
    Breadcrumb navigation links
