--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -5,19 +5,19 @@
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
         <button><div class="navicon"></div></button>
-        <ul class="visible-links" style="overflow:auto">
-          <li class="masthead__menu-item masthead__menu-item--lg" style="float:left;padding:5px"><a href="{{ base_path }}/">{{ site.title }}</a></li>
+        <ul class="visible-links">
+          <li class="masthead__menu-item masthead__menu-item--lg"><a href="{{ base_path }}/">{{ site.title }}</a></li>
           {% for link in site.data.navigation.main %}
             {% if link.url contains 'http' %}
               {% assign domain = '' %}
               {% else %}
               {% assign domain = base_path %}
             {% endif %}
-            <li class="masthead__menu-item" style="float:left;padding:5px"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
+            <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
           {% endfor %}
-          <li><a class="brand-image" style="float:right" href="{{ base_path }}"><img class="brand-image" src="images/logo.png"/></a></li>
         </ul>
         <ul class="hidden-links hidden"></ul>
+        <a class="brand-image" style="float:right" href="{{ base_path }}"><img class="brand-image" src="images/logo.png"/></a>
       </nav>
     </div>
   </div>
