--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 
-.navbar .nav > li > a.brand-image {
+a.brand-image {
     width: 25%;
     position: absolute;
     top: -32%;
